tests/NormalTests/paczka1/fuzzy1/39550363.err
Error in line 3: q2azK A400 d7,0
Error in line 1: q2azK A400 42,5
Error in line 2: TjRHPP A400 53,9
Error in line 13: TjRHPP S290 372,3
Error in line 33: GsL A400 89,65
